Please see http://www.poissonboltzmann.org/pdb2pqr/release-history

# These are notes for the current version of PDB2PQR

- NEW FEATURES
 * A ligand file with duplicate atoms will cause pdb2pqr to stop instead of issue a warning.
 * Improved error reporting.
 * Added support for reference command line option for PROPKA.
 * Added newresinter plugin.
 * Mol2 file handling is now case insensitive with atom names. 
 * PROPKA with a pH of 7 is now specified by default on the web service.
 * Compilation is now done with scons.
 * Verbose output now includes information on all patches applied during a run.
 * Added stderr and stdout to web error page. 
 * Added warning to water optimization when other water is ignored.
 * Command line used to generate a pqr is now duplicated in the comments of the output.
 * Added support for NUMMDL in parser.
 
- BUG FIXES
 * Rolled back change that prevented plugins from interfering with each other. Large proteins would cause a stack overflow when trying to do a deep copy.
 * Updated INSTALL file to reflect no more need for Fortran.
 * Fixed apbs input file to match what web interface produces.
 * Fixed user specified mobile ion species not being passed to apbs input file.
 * Removed ambiguous A, ADE, C, CYT, G, GUA, T, THY, U, URA as possible residue names.
 * Removed eval from pdb parsing routines.
 * Updated web links to refer to http://www.poissonboltzmann.org where appropriate. 
 * Fixed hbond extension output to include insertion code in residue name.
 * Fixed debumping routines not including water in their checks. Fixes bad debump of ASN B 20 in 1gm9 when run with pH 7.0.
 * Fixed debumping failing to use best angle for a specific dihedral angle when no tested angles are without conflict.
 
- CHANGES
 * Removed numpy from contrib. The user is expected to have numpy installed and available to python at configuration.